[package]
name = "answeredthis"
version = "0.1.0"
authors = ["Tim Ryan <id@timryan.org>"]

[dependencies]
iron = "*"
diesel = { version = "0.7.1", features = ["sqlite"], default-features = false }
diesel_codegen = { version = "0.7.2", features = ["sqlite"], default-features = false }
dotenv = "0.8.0"
dotenv_macros = "0.9.0"
router = "*"
persistent = "0.0.6"
mustache = "0.7.0"
rustc-serialize = "*"
maplit = "*"
pulldown-cmark = "0.0.8"
params = "*"
