[package]
authors = ["Tim Ryan <id@timryan.org>"]
name = "answeredthis"
version = "0.1.0"
[dependencies]
cached = "0.5.0"
chrono = "0.3"
cookie = "0.10.1"
dotenv = "0.11.0"
dotenv_codegen = "0.11.0"
futures = "0.1.21"
hyper = "0.11.25"
hyper-tls = "0.1.3"
iron = "0.6.0"
lazy_static = "0.1.*"
maplit = "*"
mount = "0.4.0"
mustache = "0.7.0"
params = "*"
persistent = "0.0.6"
pulldown-cmark = "0.0.8"
rayon = "1.0.1"
regex = "0.1"
router = "*"
rustc-serialize = "*"
serde = "1.0.38"
serde_derive = "1.0.38"
serde_json = "*"
staticfile = "0.5.0"
syntect = "1.0.2"
tokio-core = "0.1.16"

[dependencies.diesel]
default-features = false
features = ["sqlite"]
version = "0.11.0"

[dependencies.diesel_codegen]
default-features = false
features = ["sqlite"]
version = "0.11.0"

[dependencies.htmlescape]
git = "https://github.com/veddan/rust-htmlescape.git"

[dependencies.uuid]
features = ["v4"]
version = "0.2"
